// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a parameter with prompt enabled given an invalid value at line does not prompt > args 1`] = `
[Error: Invalid value for a:
Value is too short.]
`;

exports[`a parameter with prompt enabled given an invalid value at line does not prompt > tty 1`] = `[]`;

exports[`a required parameter can be given at prompt > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`a required parameter can be given at prompt > tty 1`] = `
[
  "Please give argument for parameter \\"a\\"",
  "foo",
]
`;

exports[`a required parameter given by flag is not asked for in prompt > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`a required parameter given by flag is not asked for in prompt > tty 1`] = `[]`;

exports[`a required parameter opted out of prompt is not prompted for > args 1`] = `[Error: Missing argument for flag "a".]`;

exports[`a required parameter opted out of prompt is not prompted for > tty 1`] = `[]`;

exports[`an optional parameter can be skipped at prompt > args 1`] = `
{
  "a": undefined,
  "help": false,
}
`;

exports[`an optional parameter can be skipped at prompt > tty 1`] = `[]`;

exports[`by default parameter prompt is disabled > args 1`] = `[Error: Missing argument for flag "a".]`;

exports[`by default parameter prompt is disabled > tty 1`] = `[]`;

exports[`prompt input is validated > args 1`] = `
{
  "a": "xx",
  "help": false,
}
`;

exports[`prompt input is validated > tty 1`] = `
[
  "Please give argument for parameter \\"a\\"",
  "x",
  "Invalid value: Value is too short.",
  "xx",
]
`;

exports[`when there is no tty then prompt is skipped > args 1`] = `[Error: Missing argument for flag "a".]`;

exports[`when there is no tty then prompt is skipped > tty 1`] = `[]`;
